added more problem solutions